tests/ui/generics_with_bounds.stderr
error[E0599]: no method named `build` found for struct `MyStructBuilder<false, true, String>` in the current scope
  --> tests/ui/generics_with_bounds.rs:12:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          --------------------- method `build` not found for this
...
12 |         .build();
   |          ^^^^^ method not found in `MyStructBuilder<false, true, String>`
   |
   = note: the method was found for
           - `MyStructBuilder<true, true, T>`
